--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,41 +1,19 @@
 {
     "_version": "1.1.0",
 	
-	"start_url": "<startUrl>",
-	
     "sap.app": {
         "_version": "1.1.0",
-        "id": "<id>",
+        "id": "sap.ui.demo.walkthrough",
         "type": "application",
-        "i18n": "<i18nPathRelativeToManifest>",
+        "i18n": "i18n/i18n.properties",
         "applicationVersion": {
-            "version": "<version>"
+            "version": "1.0.0"
         },
-        "title": "{{<title>}}",
-        "tags": {
-            "keywords": [
-                "{{<keyword1>}}", "{{<keyword2>}}"
-            ]
-        },
-        "dataSources": {
-            "<dataSourceAlias>": {
-                "uri": "<uri>",
-                "settings": {
-                    "localUri": "<localUri>"
-                }
-            }
-        }
+        "title": "{{appTitle}}",
+        "description": "{{appDescription}}"
     },
     "sap.ui": {
         "_version": "1.1.0",
-        "icons": {
-            "icon": "<icon>",
-            "favIcon": "<favIcon>",
-            "phone": "<phone>",
-            "phone@2": "<phone@2>",
-            "tablet": "<tablet>",
-            "tablet@2": "<tablet@2>"
-        },
         "deviceTypes": {
             "desktop": true,
             "tablet": true,
@@ -48,58 +26,29 @@
     },
     "sap.ui5": {
         "_version": "1.1.0",
-        "resources": {
-            "js": [
-                {
-                    "uri": "<uri>"
-                }
-            ],
-            "css": [
-                {
-                    "uri": "<uri>",
-                    "id": "<id>"
-                }
-            ]
-        },
         "dependencies": {
-            "minUI5Version": "<minUI5Version>",
+            "minUI5Version": "1.60",
             "libs": {
-                "<ui5lib1>": {                   
-                    "minVersion": "<minVersion1>"
-                },
-                "<ui5lib2>": {                   
-                    "minVersion": "<minVersion2>"
-                }
-            },
-            "components": {
-                "<ui5component1>": {
-                    "minVersion": "<minComp1Version>"
-                }
+                "sap.m": {}
             }
         },
         "models": {
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
-                "uri": "<uriRelativeToManifest>"
-            },
-            "": {
-                "dataSource": "<dataSourceAlias>",
-                "settings": {}
+                "settings": {
+                    "bundleName": "sap.ui.demo.walkthrough.i18n.i18n",
+                    "supportedLocales": [""],
+                    "fallbackLocale": ""
+                }
             }
         },
-        "rootView": "<rootView>",
+        "rootView": {
+            "viewName": "sap.ui.demo.walkthrough.view.App",
+            "type": "XML",
+            "async": true,
+            "id": "app"
+        },
         "handleValidation": false,
-        "config": {
-          
-        },
-        "routing": {
-          
-        },
-        "extends": {
-            "component" : "<extendedComponentId>",
-			"minVersion": "<minComp1Version>",
-			"extensions": {}
-        },
         "contentDensities": {
             "compact": false,
             "cozy": false
