--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -26,6 +26,13 @@
     },
     "sap.ui5": {
         "_version": "1.1.0",
+        "resources": {
+            "css": [
+                {
+                    "uri": "css/style.css"
+                }
+            ]
+        },
         "dependencies": {
             "minUI5Version": "1.60",
             "libs": {
