--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -47,6 +47,10 @@
                     "supportedLocales": [""],
                     "fallbackLocale": ""
                 }
+            },
+            "invoice": {
+                "type": "sap.ui.model.json.JSONModel",
+                "uri": "Invoices.json"
             }
         },
         "rootView": {
