--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -10,7 +10,16 @@
             "version": "1.0.0"
         },
         "title": "{{appTitle}}",
-        "description": "{{appDescription}}"
+        "description": "{{appDescription}}",
+        "dataSources": {
+            "invoiceRemote": {
+                "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/",
+                "type": "OData",
+                "settings": {
+                    "odataVersion": "2.0"
+                }
+            }
+        }
     },
     "sap.ui": {
         "_version": "1.1.0",
@@ -49,8 +58,7 @@
                 }
             },
             "invoice": {
-                "type": "sap.ui.model.json.JSONModel",
-                "uri": "Invoices.json"
+                "dataSource": "invoiceRemote"
             }
         },
         "rootView": {
